crates/krypton/tests/snapshots/inspect_test__inspect_consumed.snap
---
source: crates/krypton/tests/inspect_test.rs
expression: output
---
extern "krypton.runtime.KryptonIO" {
    fun println(Object) -> Unit
}

type Handle = MkHandle(String)

impl Resource[Handle] {
    fun close(h: ~Handle) -> Unit = println("manual_close")
}

fun main() -> Unit {
    let h: ~Handle = MkHandle("test")
    println("opened")
    close(h)
    # move: h
}
