crates/krypton/tests/snapshots/inspect_test__inspect_question_mark.snap
---
source: crates/krypton/tests/inspect_test.rs
expression: output
---
extern java "krypton.runtime.KryptonIO" {
    fun println(Object) -> Unit
}

type Handle = MkHandle(String)

impl Resource[Handle] {
    fun close(h: ~Handle) -> Unit = println("closed")
}

fun fallible() -> Result[String, Int] = Err("fail")

fun work() -> Result[String, Int] {
    let h: ~Handle = MkHandle("test")
    println("opened")
    # close(h) [early return]
    let x: Int = fallible()?
    Ok(x)
    # close(h) [scope exit]
}

fun main() -> Unit = match work() {
    Ok(v) => println(v),
    Err(e) => println("err"),
}
